fix:add interview page

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "routes": [
+    { "src": "/interview/assets/(.*)", "dest": "/assets/$1" },
     { "handle": "filesystem" },
     { "src": "/interview(.*)", "dest": "/index.html" },
     { "src": "/", "status": 301, "headers": { "Location": "/interview" } }
